# parsentry

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  HACKING.md  README.ja.md  README.md  README_codex.md  README_crush.md  README_opencode.md  SKILL.md  build.rs  deny.toml  devenv.nix  flake.nix  index.html  index.txt  mutants.toml  parsentry.skill  release.toml
.claude/skills/pr-validation/: SKILL.md  reference.md  validate.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  mutants.yml  pr-quality-check.yml  release.yml  scan.yml  sync-packaging.yml  website.yml
.parsentry/: cache
404/: index.html
_next/static/chunks/: 239-e60e6c5d64a99469.js  255-1709da23ae60611f.js  255-4b69165c5f23db9b.js  255-71c93934a7b806f0.js  336-0c6e4752d9b56429.js  684-a8e2d985100d868d.js  766-6e359334926e1e20.js  858.c2da661219dfbf87.js  900-5922c17986b57410.js  992-b83d2d5145006583.js  main-2159880934e08a15.js  main-2907865f598b95a9.js  main-a502f86a0cf382e3.js  main-ea6665a75becb61c.js  webpack-0f38b40c1ffdbb55.js  webpack-254aaf39e731571f.js  webpack-26cab020ace54063.js  webpack-a13c972683254808.js
_next/static/css/: 0978acdbf34543ee.css  828bc0854dbd4486.css  894254d363b690c8.css  a8bc8892c70252e0.css  aed2a606a66d8924.css  c5f9afc3f1215c64.css  e5adfef5f9008790.css  f1f573df2533b9b4.css  f3fb2c5d07d43ff5.css
_next/static/kSY6CDpZXJmjya7P9S8Wk/: _buildManifest.js
coverage/: tarpaulin-report.html
crates/parsentry-analyzer/: Cargo.toml
crates/parsentry-analyzer/src/: analyzer.rs  lib.rs  pattern_generator.rs  pattern_generator_claude_code.rs
crates/parsentry-cache/: Cargo.toml
crates/parsentry-cache/src/: cleanup.rs  entry.rs  key.rs  lib.rs  storage.rs
crates/parsentry-claude/: Cargo.toml
crates/parsentry-claude-code/: Cargo.toml
crates/parsentry-claude-code/src/: executor.rs  lib.rs  parser.rs  prompt.rs  stream.rs
crates/parsentry-claude-code/src/acp/: client.rs  connection.rs  mod.rs
crates/parsentry-claude/src/: lib.rs
crates/parsentry-codex/: Cargo.toml
crates/parsentry-codex/src/: executor.rs  lib.rs  parser.rs  prompt.rs  stream.rs
crates/parsentry-core/: Cargo.toml  README.md
crates/parsentry-core/src/: collector.rs  file_classifier.rs  file_discovery.rs  language.rs  lib.rs  par.rs  response.rs  threat_model.rs  threat_model_prompt.rs  threat_model_report.rs  vuln_type.rs
crates/parsentry-executor/: Cargo.toml
crates/parsentry-executor/src/: lib.rs  parser.rs
crates/parsentry-i18n/: Cargo.toml
crates/parsentry-i18n/src/: ja.rs  lib.rs
crates/parsentry-parser/: Cargo.toml
crates/parsentry-parser/src/: lib.rs  parser.rs  patterns.rs
crates/parsentry-parser/src/patterns/: circleci.yml  github-actions.yml  gitlab-ci.yml  jenkins.yml  terraform.yml  travis.yml
crates/parsentry-prompt/: Cargo.toml
crates/parsentry-prompt/src/: analysis.rs  builder.rs  file_reference.rs  iac.rs  lib.rs  security_analysis.rs  traits.rs  types.rs  verification.rs
crates/parsentry-reports/: Cargo.toml
crates/parsentry-reports/src/: filename.rs  jira.rs  lib.rs  linear.rs  markdown.rs  merge.rs  notion.rs  report_common.rs  sarif.rs  summary.rs  validation.rs
crates/parsentry-reports/src/prompts/: analysis.rs  evaluator.rs  iac.rs  mod.rs
crates/parsentry-threat-model/: Cargo.toml
crates/parsentry-threat-model/src/: collector.rs  generator.rs  lib.rs  model.rs  report.rs
crates/parsentry-utils/: Cargo.toml
crates/parsentry-utils/src/: file_classifier.rs  file_discovery.rs  lib.rs
custom_queries/c/: references.scm
custom_queries/cpp/: definitions.scm  references.scm
docs/: ADD_NEW_LANGUAGE.md  configuration.md  github-actions.md  index.html  index.txt
docs/adr/: 001-rebrand-parallel-agent-infrastructure.md
docs/concepts/: analysis_pipeline.md  output_format.md  par_framework.md
docs/reports/NodeGoat/: SURFACE-001.prompt.md  SURFACE-001.sarif.json  SURFACE-002.cache_key  SURFACE-002.prompt.md  SURFACE-002.sarif.json  SURFACE-003.prompt.md  SURFACE-003.sarif.json  SURFACE-004.cache_key  SURFACE-004.prompt.md  SURFACE-004.sarif.json  SURFACE-005.cache_key  SURFACE-005.prompt.md  SURFACE-005.sarif.json  SURFACE-006.cache_key  SURFACE-006.prompt.md  (+43 more)
docs/website/: README.md  package.json  tailwind.config.ts
evals/: evals.json  trigger_queries.json
evals/scripts/: trigger_eval.sh
example/c-vulnerable-app/: Makefile  README.md  main.c
example/cpp-vulnerable-app/: Makefile  main.cpp
example/javascript-vulnerable-app/: MODERN_ATTACKS.md  app.js  package.json
example/python-vulnerable-app/: requirements.txt
examples/: parsentry.toml
packaging/: README.md
packaging/aur/: PKGBUILD  PKGBUILD-git
packaging/homebrew/: parsentry.rb
references/: triage.md
scripts/: sarif.sh  validate-patterns.sh
security_patterns/: patterns.yml
src/: analyzer.rs  args.rs  call_graph.rs  config.rs  constants.rs  context_optimizer.rs  evaluator.rs  executor.rs  github.rs  lib.rs  main.rs  mvra.rs  parser.rs  pattern_generator.rs  pattern_generator_claude_code.rs  pattern_generator_codex.rs  pipeline.rs  prompt.rs  repo.rs  response.rs  security_patterns.rs  url_collector.rs
src/cli/: args.rs  mod.rs  root.rs  streaming_ui.rs  ui.rs
src/llms/: claude.rs  function_call.rs  mod.rs  ollama.rs  openai.rs
src/prompts/: analysis.rs
tests/: accuracy_test_suite.rs  analyzer_test.rs  analyzer_unit_test.rs  context_quality_accuracy_test.rs  django_performance_benchmark_test.rs  end_to_end_accuracy_test.rs  external_benchmark_integration_test.rs  integration_test.rs  language_filter_integration_test.rs  main_unit_test.rs  nodejs_performance_benchmark_test.rs  par_classification_accuracy_test.rs  parser_test.rs  pattern_generator_test.rs  performance_benchmark_test.rs  prompt_accuracy_unit_test.rs  prompts_unit_test.rs  real_world_benchmark_test.rs  repo_test.rs  response_unit_test.rs  security_patterns_unit_test.rs  spring_boot_performance_benchmark_test.rs
tools/: sync-versions.sh
tools/pdf-report/: package-lock.json  package.json
(+404 files in other folders)
