[package]
name = "parsentry"
version = "0.14.0"
edition = "2024"
default-run = "parsentry"


[features]
default = []
snapshot-test = []
benchmark = []

[dependencies]
tokio.workspace = true
parsentry-core = { path = "crates/parsentry-core" }
parsentry-parser = { path = "crates/parsentry-parser" }
parsentry-i18n = { path = "crates/parsentry-i18n" }
parsentry-utils = { path = "crates/parsentry-utils" }
parsentry-reports = { path = "crates/parsentry-reports" }
parsentry-analyzer = { path = "crates/parsentry-analyzer" }
parsentry-claude-code = { path = "crates/parsentry-claude-code" }
parsentry-codex = { path = "crates/parsentry-codex" }
parsentry-prompt = { path = "crates/parsentry-prompt" }
parsentry-cache = { path = "crates/parsentry-cache" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
regex = "1.10"
toml = "0.8"
dirs = "5.0"
thiserror.workspace = true
log = "0.4"
env_logger = "0.11"
anyhow.workspace = true
async-trait.workspace = true
quick-xml = { version = "0.31", features = ["serialize"] }
dotenvy = "0.15"
genai = "0.4.0-alpha.15"
futures = { version = "0.3", features = ["thread-pool"] }
indicatif = "0.17"
terminal_size = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.10"
octocrab = "0.41"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
tokio-test = "0.4"

[workspace]
members = ["crates/*"]
exclude = ["tree-sitter-*"]

[workspace.package]
edition = "2024"
version = "0.14.0"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full", "test-util", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

[workspace.metadata.insta]
snapshot-path = "tests/snapshots"

# APIを使用するテストの設定
[[test]]
name = "accuracy_test_suite"
path = "tests/accuracy_test_suite.rs"
required-features = ["benchmark"]

[[test]]
name = "analyzer_test"
path = "tests/analyzer_test.rs"
required-features = ["benchmark"]

[[test]]
name = "analyzer_unit_test"
path = "tests/analyzer_unit_test.rs"

[[test]]
name = "context_quality_accuracy_test"
path = "tests/context_quality_accuracy_test.rs"
required-features = ["benchmark"]

[[test]]
name = "end_to_end_accuracy_test"
path = "tests/end_to_end_accuracy_test.rs"
required-features = ["benchmark"]

[[test]]
name = "external_benchmark_integration_test"
path = "tests/external_benchmark_integration_test.rs"
required-features = ["benchmark"]

[[test]]
name = "par_classification_accuracy_test"
path = "tests/par_classification_accuracy_test.rs"
required-features = ["benchmark"]

[[test]]
name = "prompt_accuracy_unit_test"
path = "tests/prompt_accuracy_unit_test.rs"

[[test]]
name = "prompt_slo_test"
path = "tests/prompt_slo_test.rs"
required-features = ["benchmark"]

[[test]]
name = "real_world_benchmark_test"
path = "tests/real_world_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "performance_benchmark_test"
path = "tests/performance_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "nodejs_performance_benchmark_test"
path = "tests/nodejs_performance_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "django_performance_benchmark_test"
path = "tests/django_performance_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "spring_boot_performance_benchmark_test"
path = "tests/spring_boot_performance_benchmark_test.rs"
required-features = ["benchmark"]
