[package]
name = "parsentry"
version = "0.17.0"
edition = "2024"
default-run = "parsentry"


[features]
default = []
snapshot-test = []
benchmark = []

[dependencies]
tokio.workspace = true
parsentry-core = { path = "crates/parsentry-core" }
parsentry-reports = { path = "crates/parsentry-reports" }
parsentry-claude = { path = "crates/parsentry-claude" }
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
regex = "1.10"
thiserror.workspace = true
log = "0.4"
anyhow.workspace = true
dotenvy = "0.15"
indicatif = "0.17"
terminal_size = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tempfile = "3.10"
octocrab = "0.41"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
sha2 = "0.10"

[dev-dependencies]
insta = { version = "1.42.0", features = ["yaml"] }
tokio-test = "0.4"

[workspace]
members = ["crates/*"]
exclude = ["tree-sitter-*"]

[workspace.package]
edition = "2024"
version = "0.17.0"

[workspace.dependencies]
tokio = { version = "1.51", features = ["full", "test-util", "macros", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"

[workspace.metadata.insta]
snapshot-path = "tests/snapshots"

# APIを使用するテストの設定
[[test]]
name = "accuracy_test_suite"
path = "tests/accuracy_test_suite.rs"
required-features = ["benchmark"]

[[test]]
name = "analyzer_test"
path = "tests/analyzer_test.rs"
required-features = ["benchmark"]

[[test]]
name = "analyzer_unit_test"
path = "tests/analyzer_unit_test.rs"

[[test]]
name = "context_quality_accuracy_test"
path = "tests/context_quality_accuracy_test.rs"
required-features = ["benchmark"]

[[test]]
name = "end_to_end_accuracy_test"
path = "tests/end_to_end_accuracy_test.rs"
required-features = ["benchmark"]

[[test]]
name = "external_benchmark_integration_test"
path = "tests/external_benchmark_integration_test.rs"
required-features = ["benchmark"]

[[test]]
name = "par_classification_accuracy_test"
path = "tests/par_classification_accuracy_test.rs"
required-features = ["benchmark"]

[[test]]
name = "prompt_slo_test"
path = "tests/prompt_slo_test.rs"
required-features = ["benchmark"]

[[test]]
name = "real_world_benchmark_test"
path = "tests/real_world_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "performance_benchmark_test"
path = "tests/performance_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "nodejs_performance_benchmark_test"
path = "tests/nodejs_performance_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "django_performance_benchmark_test"
path = "tests/django_performance_benchmark_test.rs"
required-features = ["benchmark"]

[[test]]
name = "spring_boot_performance_benchmark_test"
path = "tests/spring_boot_performance_benchmark_test.rs"
required-features = ["benchmark"]
