[package]
name = "parsentry-cache"
version = "0.18.0"
edition = "2021"
description = "Content-addressable file cache for Parsentry"
license = "AGPL-3.0"
repository = "https://github.com/HikaruEgashira/parsentry"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
walkdir = "2.4"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.51", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
