[package]
name = "parsentry-claude-code"
version.workspace = true
edition.workspace = true
description = "Claude Code CLI integration for Parsentry security scanner"
license = "MIT"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing = "0.1"
chrono = "0.4"
agent-client-protocol = "0.9"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }

[dev-dependencies]
tokio-test = "0.4"
