[package]
name = "parsentry-claude-code"
version.workspace = true
edition.workspace = true
description = "Claude Code CLI integration for Parsentry security scanner"
license = "MIT"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing = "0.1"
chrono = "0.4"
parsentry-prompt = { path = "../parsentry-prompt" }
parsentry-i18n = { path = "../parsentry-i18n" }

[dev-dependencies]
tokio-test = "0.4"
