[package]
name = "parsentry-claude"
version.workspace = true
edition.workspace = true
description = "Claude Code session reader for parsentry"
license = "AGPL-3.0"
repository = "https://github.com/HikaruEgashira/parsentry"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
libc = "0.2"
dirs-next = "2.0"
