[package]
name = "parsentry-claude"
version = "0.21.1"
edition.workspace = true
description = "Claude Code session reader for parsentry"
license = "AGPL-3.0"
repository = "https://github.com/HikaruEgashira/parsentry"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs-next = "2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
