[package]
name = "parsentry-codex"
version.workspace = true
edition.workspace = true
description = "OpenAI Codex integration for Parsentry security scanner"
license = "MIT"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing = "0.1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
