[package]
name = "parsentry-core"
version.workspace = true
edition.workspace = true
description = "Core types and traits for Parsentry security scanner"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
