[package]
name = "parsentry-core"
version = "0.21.1"
edition.workspace = true
description = "Core types and traits for Parsentry"
license = "AGPL-3.0"
repository = "https://github.com/HikaruEgashira/parsentry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
