[package]
name = "parsentry-executor"
version.workspace = true
edition.workspace = true
description = "Parallel CLI agent executor for Parsentry"
license = "MIT"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing = "0.1"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
