[package]
name = "parsentry-reports"
version.workspace = true
edition.workspace = true
description = "Report generation for Parsentry"
license = "AGPL-3.0"
repository = "https://github.com/HikaruEgashira/parsentry"

[dependencies]
parsentry-core = { path = "../parsentry-core", version = "0.18.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
regex = "1.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.10"
