[package]
name = "parsentry-reports"
version.workspace = true
edition.workspace = true
description = "Report generation for Parsentry"
license = "AGPL-3.0"
repository = "https://github.com/HikaruEgashira/parsentry"

[dependencies]
parsentry-core = { path = "../parsentry-core", version = "0.20.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
regex = "1.10"
sha2 = "0.10"
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
