[package]
name = "parsentry-threat-model"
version.workspace = true
edition.workspace = true
description = "Threat modeling phase for Parsentry: generates tree-sitter queries from repository-level analysis"

[dependencies]
parsentry-core = { path = "../parsentry-core" }
parsentry-utils = { path = "../parsentry-utils" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
genai = "0.4.0-alpha.15"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
